[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/8-Bit Wonder/8-Bit Wonder.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://controls/InteractiveButton/InteractiveButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Controls/Controls.gd" type="Script" id=4]
[ext_resource path="res://assets/scenes/MainMenu/model_4.png" type="Texture" id=5]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0 ), 0.0, 1.4, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[node name="Controls" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuParticles" type="CPUParticles2D" parent="."]
position = Vector2( 512, 300 )
amount = 128
lifetime = 4.0
preprocess = 4.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
linear_accel = 30.0
scale_amount = 6.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="modelleft" type="TextureRect" parent="HBoxContainer"]
margin_right = 309.0
margin_bottom = 568.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 341.0
margin_right = 650.0
margin_bottom = 568.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 309.0
margin_bottom = 532.0
size_flags_vertical = 3

[node name="Back" parent="HBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 536.0
margin_right = 309.0
margin_bottom = 568.0
custom_fonts/font = SubResource( 2 )
text = "BACK"

[node name="modelright" type="TextureRect" parent="HBoxContainer"]
margin_left = 682.0
margin_right = 992.0
margin_bottom = 568.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
stretch_mode = 6
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Back" to="." method="_on_Back_pressed"]
